[gd_scene load_steps=17 format=3 uid="uid://d3thxbld6axya"]

[ext_resource type="Script" path="res://player.gd" id="1_ltc0k"]
[ext_resource type="Texture2D" uid="uid://ducwu1mhnqckn" path="res://ASSETS/SIGHTS/gun_sprites.png" id="1_wsjox"]
[ext_resource type="Texture2D" uid="uid://471eqetbkk04" path="res://ASSETS/SIGHTS/crosshair.png" id="2_4hthw"]
[ext_resource type="Script" path="res://Head.gd" id="2_8emgk"]
[ext_resource type="AudioStream" uid="uid://vuvlv83e76sq" path="res://ASSETS/SOUNDS/PEW.wav" id="3_r448r"]
[ext_resource type="Script" path="res://AmmoHUD.gd" id="5_vmacs"]
[ext_resource type="AudioStream" uid="uid://df3i4ty7qr23x" path="res://ASSETS/SOUNDS/click.mp3" id="6_lowhq"]
[ext_resource type="AudioStream" uid="uid://ds1tjkt2xceql" path="res://ASSETS/SOUNDS/BLING.mp3" id="8_uhb7a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jcqdb"]
atlas = ExtResource("1_wsjox")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf8j7"]
atlas = ExtResource("1_wsjox")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0btv"]
atlas = ExtResource("1_wsjox")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_23jnc"]
atlas = ExtResource("1_wsjox")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ouaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcqdb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf8j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0btv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23jnc")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_clmct"]
albedo_color = Color(0.890196, 0.501961, 0.541176, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_msug4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7xmbu"]
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ltc0k")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_8emgk")

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.265)

[node name="RayCast3D" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.093071, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="CanvasLayer" type="CanvasLayer" parent="Head"]

[node name="GunBase" type="Control" parent="Head/CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Head/CanvasLayer/GunBase"]
position = Vector2(223, -86)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_2ouaf")
animation = &"shoot"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="Crosshair" type="Sprite2D" parent="Head/CanvasLayer"]
position = Vector2(576, 324)
scale = Vector2(0.5, 0.375)
texture = ExtResource("2_4hthw")

[node name="DeathScreen" type="Control" parent="Head/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Head/CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -35.0
offset_right = 52.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Head/CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -2.0
offset_right = 32.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="AmmoHUD" type="Label" parent="Head/CanvasLayer"]
offset_left = 11.0
offset_top = 559.0
offset_right = 96.0
offset_bottom = 633.0
script = ExtResource("5_vmacs")

[node name="ShootSound" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource("3_r448r")
volume_db = -9.349
bus = &"Sfx"

[node name="ClickSound" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource("6_lowhq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_clmct")
mesh = SubResource("CapsuleMesh_msug4")

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7xmbu")

[node name="CRITICAL" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_uhb7a")
